--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Gestion-de-Ventas-para-Supermercados
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/supermercado
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
@@ -16,5 +16,3 @@ spring.jpa.show-sql=true
 # Formatear SQL en consola
 spring.jpa.properties.hibernate.format_sql=true
 
-# Dialecto MySQL (recomendado)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
